[project]
name = "spheral"
version = "0.1.0"
description = "Spherical representation of data"
authors = [
    {name = "MauricioSalazare"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.1,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

homepage = "https://github.com/MauricioSalazare/spheral"
repository = "https://github.com/MauricioSalazare/spheral"
documentation = "https://github.com/MauricioSalazare/spheral/wiki"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
dev = ["flake8", "black", "pytest", "tqdm", "dash", "matplotlib"]

[tool.poetry.group.dev.dependencies]
tqdm = "^4.67.1"
dash = "^2.18.2"
matplotlib = "^3.10.1"
flake8 = "^7.1.2"
black = "^25.1.0"
pytest = "^8.3.5"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"
